自动化代码生成

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,10 +2,11 @@
 #          db config    192.168.1.246      172.29.251.67
 ##############################################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.11.12:3306/campus-front
+jdbc.url=jdbc:mysql://localhost:3306/test
 #
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=root
+
 
 jdbc.test=SELECT 'x' FROM DUAL
 
