自动化代码生成初版实现

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,8 +2,7 @@
 #          db config    192.168.1.246      172.29.251.67
 ##############################################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test
-#
+jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=root
 
@@ -32,3 +31,6 @@ pool.idleConnectionTestPeriod=1800
 pool.acquireRetryAttempts=30
 pool.breakAfterAcquireFailure=true
 pool.testConnectionOnCheckout=false
+
+target.java.project=d:/mybati/project/src/java/java
+target.package=com.scmofit.gifm.system
