1. 添加操作说明 2. 修改注释

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -32,5 +32,6 @@ pool.acquireRetryAttempts=30
 pool.breakAfterAcquireFailure=true
 pool.testConnectionOnCheckout=false
 
+# ÎÄ¼þÂ·¾¶
 target.java.project=d:/mybati/project/src/java/java
 target.package=com.scmofit.gifm.system
