补全操作手册

--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,15 @@
     <!--发布到私服-->
     <distributionManagement>
         <repository>
-            <!--发行版-->
-            <id>personal</id>
-            <name>personal</name>
-            <url>http://192.168.1.148:8081/repository/personal/</url>
-            <uniqueVersion>false</uniqueVersion>
+            <id>nexus</id>
+            <name>Releases</name>
+            <url>http://192.168.1.148:8081/repository/maven-releases</url>
         </repository>
         <snapshotRepository>
             <!--快照版本-->
-            <id>personal</id>
-            <name>personal</name>
-            <url>http://192.168.1.148:8081/repository/personal/</url>
+            <id>nexus</id>
+            <name>snapshots</name>
+            <url>http://192.168.1.148:8081/repository/maven-snapshots/</url>
             <uniqueVersion>false</uniqueVersion>
         </snapshotRepository>
     </distributionManagement>
@@ -39,7 +37,7 @@
         <junit.version>4.12</junit.version>
         <freemarker.version>2.3.23</freemarker.version>
 		<jersey.version>2.18</jersey.version>
-        <spring.version>4.3.7.RELEASE</spring.version>
+        <spring.version>4.3.10.RELEASE</spring.version>
     </properties>
 
     <dependencies>
