--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,7 +2,7 @@
 #          db config    192.168.1.246      172.29.251.67
 ##############################################
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test?useSSL=false&?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
 jdbc.username=root
 jdbc.password=root
 
@@ -32,6 +32,6 @@ pool.acquireRetryAttempts=30
 pool.breakAfterAcquireFailure=true
 pool.testConnectionOnCheckout=false
 
-# ÎÄ¼þÂ·¾¶
-target.java.project=d:/mybati/project/src/java/java
-target.package=com.scmofit.gifm.system
+# ï¿½Ä¼ï¿½Â·ï¿½ï¿½
+target.java.project=C:/Users/scs/Desktop/DevTools/src/main/java
+target.package=com.yqy.midend.orgperm
