添加工具jar包，支持分页

--- a/pom.xml
+++ b/pom.xml
@@ -176,23 +176,15 @@
             <version>1.0.0</version>
         </dependency>-->
         <dependency>
+            <groupId>com.laoxu.util</groupId>
+            <artifactId>laoxuCommon</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
             <version>5.1.4</version>
         </dependency>
-        <!-- 1111-->
-        <!--<dependency>-->
-            <!--<groupId>mybatis-pagenation-plugin</groupId>-->
-            <!--<artifactId>com.mybatis.page.plugin</artifactId>-->
-            <!--<version>2.0.0.0</version>-->
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${basedir}/src/main/resources/mybatis/generator/mybatis-pagenation-plugin-2.0.0.0.jar</systemPath>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.github.pagehelper</groupId>-->
-            <!--<artifactId>pagehelper</artifactId>-->
-            <!--<version>5.1.4</version>-->
-        <!--</dependency>-->
     <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper -->
         <dependency>
             <groupId>tk.mybatis</groupId>
@@ -251,17 +243,12 @@
                         <artifactId>pagehelper-spring-boot-starter</artifactId>
                         <version>1.0.0</version>
                     </dependency>
-                    <!--<dependency>-->
-                    <!--<groupId>com.github.pagehelper</groupId>-->
-                    <!--<artifactId>pagehelper</artifactId>-->
-                    <!--<version>5.1.4</version>-->
-                    <!--</dependency>-->
                     <dependency>
-                        <groupId>mybatis-pagenation-plugin</groupId>
-                        <artifactId>com.mybatis.page.plugin</artifactId>
-                        <version>2.0.0.0</version>
+                        <groupId>com.laoxu.util</groupId>
+                        <artifactId>laoxuCommon</artifactId>
+                        <version>1.0</version>
                         <scope>system</scope>
-                        <systemPath>${basedir}/src/main/resources/mybatis/generator/mybatis-pagenation-plugin-2.0.0.0.jar</systemPath>
+                        <systemPath>${basedir}/lib/laoxuCommon-1.0.jar</systemPath>
                     </dependency>
                     <!-- https://mvnrepository.com/artifact/tk.mybatis/mapper -->
                     <dependency>
