--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -9,7 +9,7 @@ target.package=com.scmofit.gifm
 
 #SqlServer 配置
 jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://125.71.224.110:3673;databaseName=GIFM
+jdbc.url=jdbc:sqlserver://125.71.224.110:3673;databaseName=GIFM_bak
 jdbc.username=sa
 jdbc.password=SCsme202
 jdbc.driverLocation=D:\Development tools\maven-repository\com/microsoft\sqlserver\mssql-jdbc\6.4.0.jre8\mssql-jdbc-6.4.0.jre8.jar
