修改部分配置，还需优化

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,31 +1,49 @@
 #############################################
-#          db config    192.168.1.246      172.29.251.67
+#           class 读取的配置
 ##############################################
-
 #//生成代码的写入路径
 target.java.project=D:/project/DevTools/src/main/java
-target.package=com.scmofit.gifm
+#target.package=com.scmofit.gifm
+##生成文件的位置
+target.package=com.yqy.midend.orgperm
+
+#############################################
+#            generatorConfig.xml 读取
+##############################################
+xml.javaPorject=src\\main\\java
+xml.xmlPorject=src\\main\\resources
+xml.pojoPackage=a.pojo
+xml.daoPackage=a.dao
+xml.xmlPackage=mapper
 
 
-#SqlServer 配置
-jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-jdbc.url=jdbc:sqlserver://125.71.224.110:3673;databaseName=GIFM_bak
-jdbc.username=sa
-jdbc.password=SCsme202
-jdbc.driverLocation=D:\Development tools\maven-repository\com/microsoft\sqlserver\mssql-jdbc\6.4.0.jre8\mssql-jdbc-6.4.0.jre8.jar
-jdbc.test=SELECT 'x'
 
-
-#mysql 配置
+#############################################
+#             #mysql 配置                   #
+#############################################
 # 5驱动
-#jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.driverClassName=com.mysql.jdbc.Driver
 # 8驱动
-#mysql.driver=com.mysql.cj.jdbc.Driver
-#jdbc.test=SELECT 'x' FROM DUAL
-#jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
+mysql.driver=com.mysql.cj.jdbc.Driver
+jdbc.test=SELECT 'x' FROM DUAL
+jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.username=root
+jdbc.password=root
+driverlocation=././lib/mysql-connector-java-5.1.46.jar
+#jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
+
+
+
+#############################################
+#          SqlServer 配置                  #
+#############################################
+#jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#jdbc.url=jdbc:sqlserver://125.71.224.110:3673;databaseName=GIFM_bak
 #jdbc.username=sa
 #jdbc.password=SCsme202
-#jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
+#jdbc.test=SELECT 'x'
+#driverlocation=././lib/sqljdbc4-4.0.jar
+#jdbc.driverLocation=D:\Development tools\maven-repository\com/microsoft\sqlserver\mssql-jdbc\6.4.0.jre8\mssql-jdbc-6.4.0.jre8.jar
 
 
 #############################################
