--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,14 +1,15 @@
 #############################################
-#           class 读取的配置
+#           class 读取的配置 生成pojo conroller server impl dao xml
 ##############################################
 #//生成代码的写入路径
 target.java.project=D:/project/DevTools/src/main/java
 #target.package=com.scmofit.gifm
 ##生成文件的位置
-target.package=com.yqy.midend.orgperm
+target.package=a
+
 
 #############################################
-#            generatorConfig.xml 读取
+#  generatorConfig.xml 读取 只能生成 pojo dao xml
 ##############################################
 xml.javaPorject=src\\main\\java
 xml.xmlPorject=src\\main\\resources
