--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <freemarker.version>2.3.23</freemarker.version>
 		<jersey.version>2.18</jersey.version>
         <spring.version>4.3.10.RELEASE</spring.version>
+        <lombok.ver>1.16.22</lombok.ver>
     </properties>
 
     <dependencies>
@@ -191,6 +192,13 @@
             <artifactId>mapper</artifactId>
             <version>4.0.2</version>
         </dependency>
+    <!-- 小辣椒 -->
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>${lombok.ver}</version>
+        <scope>provided</scope>
+    </dependency>
 
 
 
@@ -233,7 +241,7 @@
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.6</version>
                 <configuration>
-                    <configurationFile>${basedir}/src/main/resources/mybatis/generator/generatorConfig.xml</configurationFile>
+                    <configurationFile>src/main/resources/generatorConfig.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>true</overwrite>
                 </configuration>
@@ -261,7 +269,6 @@
                         <artifactId>mysql-connector-java</artifactId>
                         <version>5.1.44</version>
                     </dependency>
-
                 </dependencies>
             </plugin>
         </plugins>
