--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,11 @@
         <version>${lombok.ver}</version>
         <scope>provided</scope>
     </dependency>
-
+    <dependency>
+        <groupId>org.mybatis.generator</groupId>
+        <artifactId>mybatis-generator-maven-plugin</artifactId>
+        <version>1.3.6</version>
+    </dependency>
 
 
     </dependencies>
