--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -24,8 +24,8 @@ xml.xmlPackage=mapper
 #############################################
 # 5驱动
 jdbc.driverClassName=com.mysql.jdbc.Driver
-# 8驱动
-mysql.driver=com.mysql.cj.jdbc.Driver
+## 8驱动
+#mysql.driver=com.mysql.cj.jdbc.Driver
 jdbc.test=SELECT 'x' FROM DUAL
 jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
 jdbc.username=root
@@ -45,6 +45,19 @@ driverlocation=././lib/mysql-connector-java-5.1.46.jar
 #jdbc.test=SELECT 'x'
 #driverlocation=././lib/sqljdbc4-4.0.jar
 #jdbc.driverLocation=D:\Development tools\maven-repository\com/microsoft\sqlserver\mssql-jdbc\6.4.0.jre8\mssql-jdbc-6.4.0.jre8.jar
+
+
+#############################################
+#             oracle 配置                   #
+#############################################
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.test=SELECT 'x' FROM DUAL
+#jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
+#jdbc.username=root
+#jdbc.password=root
+#driverlocation=././lib/ojdbc7.jar
+#jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
+
 
 
 #############################################
