--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,10 +2,10 @@
 #           class 读取的配置 生成pojo conroller server impl dao xml
 ##############################################
 #//生成代码的写入路径
-target.java.project=D:/project/DevTools/src/main/java
+target.java.project=F:/project/DevTools/src/main/java
 #target.package=com.scmofit.gifm
 ##生成文件的位置
-target.package=a
+target.package=com.dsy.map
 
 
 #############################################
@@ -13,8 +13,8 @@ target.package=a
 ##############################################
 xml.javaPorject=src\\main\\java
 xml.xmlPorject=src\\main\\resources
-xml.pojoPackage=a.pojo
-xml.daoPackage=a.dao
+xml.pojoPackage=com.dsy.map.pojo
+xml.daoPackage=com.dsy.map.dao
 xml.xmlPackage=mapper
 
 
@@ -23,14 +23,14 @@ xml.xmlPackage=mapper
 #             #mysql 配置                   #
 #############################################
 # 5驱动
-jdbc.driverClassName=com.mysql.jdbc.Driver
-## 8驱动
+#jdbc.driverClassName=com.mysql.jdbc.Driver
+### 8驱动
 #mysql.driver=com.mysql.cj.jdbc.Driver
-jdbc.test=SELECT 'x' FROM DUAL
-jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
-jdbc.username=root
-jdbc.password=root
-driverlocation=././lib/mysql-connector-java-5.1.46.jar
+#jdbc.test=SELECT 'x' FROM DUAL
+#jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
+#jdbc.username=root
+#jdbc.password=root
+#driverlocation=././lib/mysql-connector-java-5.1.46.jar
 #jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
 
 
@@ -50,12 +50,12 @@ driverlocation=././lib/mysql-connector-java-5.1.46.jar
 #############################################
 #             oracle 配置                   #
 #############################################
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.test=SELECT 'x' FROM DUAL
-#jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
-#jdbc.username=root
-#jdbc.password=root
-#driverlocation=././lib/ojdbc7.jar
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.test=SELECT 'x' FROM DUAL
+jdbc.url=jdbc:oracle:thin:@192.168.1.120:1521:ORCL
+jdbc.username=cdscyjs
+jdbc.password=cdscyjs
+driverlocation=././lib/ojdbc6.jar
 #jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
 
 
