--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -22,10 +22,10 @@ xml.xmlPackage=mapper
 #############################################
 #             #mysql 配置                   #
 #############################################
-# 5驱动
+### 5驱动
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 ### 8驱动
-#mysql.driver=com.mysql.cj.jdbc.Driver
+###mysql.driver=com.mysql.cj.jdbc.Driver
 #jdbc.test=SELECT 'x' FROM DUAL
 #jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
 #jdbc.username=root
