--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 		<jersey.version>2.18</jersey.version>
         <spring.version>4.3.10.RELEASE</spring.version>
         <lombok.ver>1.16.22</lombok.ver>
+        <mysql5.ver>5.1.35</mysql5.ver>
+        <mysql8.ver>8.0.11</mysql8.ver>
     </properties>
 
     <dependencies>
@@ -48,11 +50,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-        <!--mysql驱动包-->
+        <!-- mybatis 驱动-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.44</version>
+            <version>${mysql8.ver}</version>
         </dependency>
         <!-- SQLServer驱动 -->
         <dependency>
