--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -2,7 +2,7 @@
 #           class 读取的配置 生成pojo conroller server impl dao xml
 ##############################################
 #//生成代码的写入路径
-target.java.project=D:/project/DevTools/src/main/java
+target.java.project=F:/project/DevTools/src/main/java
 #target.package=com.scmofit.gifm
 ##生成文件的位置
 target.package=com.dsy.map
@@ -22,17 +22,17 @@ xml.xmlPackage=mapper
 #############################################
 #             #mysql 配置                   #
 #############################################
-jdbc.test=SELECT 'x' FROM DUAL
-jdbc.username=root
-jdbc.password=root
+#jdbc.test=SELECT 'x' FROM DUAL
+#jdbc.username=root
+#jdbc.password=root
 ### 5驱动
 #jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://101.207.248.146:53306/yqycloud?useUnicode=true&characterEncoding=utf8&useSSL=false
 #driverlocation=././lib/mysql-connector-java-5.1.46.jar
 ### 8驱动
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url: jdbc:mysql://localhost:3306/map?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-driverlocation=././lib/mysql-connector-java-8.0.11.jar
+#jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+#jdbc.url: jdbc:mysql://localhost:3306/map?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+#driverlocation=././lib/mysql-connector-java-8.0.11.jar
 #jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
 
 
@@ -52,12 +52,12 @@ driverlocation=././lib/mysql-connector-java-8.0.11.jar
 #############################################
 #             oracle 配置                   #
 #############################################
-#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-#jdbc.test=SELECT 'x' FROM DUAL
-#jdbc.url=jdbc:oracle:thin:@10.1.73.230:1521:ORCL
-#jdbc.username=cdscyjs
-#jdbc.password=cdscyjs
-#driverlocation=././lib/ojdbc6.jar
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.test=SELECT 'x' FROM DUAL
+jdbc.url=jdbc:oracle:thin:@10.1.73.230:1521:ORCL
+jdbc.username=cdscyjs
+jdbc.password=cdscyjs
+driverlocation=././lib/ojdbc6.jar
 #jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
 
 
