--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,11 @@
             <version>6.4.0.jre8</version>
         </dependency>
         <!-- oracle驱动 -->
-        <dependency>
-            <groupId>com.oracle</groupId>
-             <artifactId>ojdbc6</artifactId>
-            <version>11.2.0.1.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.oracle</groupId>-->
+             <!--<artifactId>ojdbc6</artifactId>-->
+            <!--<version>11.2.0.1.0</version>-->
+        <!--</dependency>-->
         <!-- 日志文件管理包 log4j 2.x-->
         <!-- log start -->
         <dependency>
