修改生成 工具，空主键和模板还有问题！

--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -4,7 +4,7 @@
 #//生成代码的写入路径
 target.java.project=D:/project/DevTools/src/main/java
 ##生成文件的位置
-target.package=com.excel
+target.package=com.gifm
 
 
 #############################################
@@ -12,8 +12,8 @@ target.package=com.excel
 ##############################################
 xml.javaPorject=src\\main\\java
 xml.xmlPorject=src\\main\\resources
-xml.pojoPackage=com.excel.pojo
-xml.daoPackage=com.excel.dao
+xml.pojoPackage=com.gifm.pojo
+xml.daoPackage=com.gifm.dao
 xml.xmlPackage=mapper
 
 
@@ -23,17 +23,17 @@ xml.xmlPackage=mapper
 #############################################
 jdbc.test=SELECT 'x' FROM DUAL
 jdbc.username=root
-jdbc.password=root
+jdbc.password=df34SD#4s
 ### 5驱动
-jdbc.driverClassName=com.mysql.jdbc.Driver
+#jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/policy?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-driverlocation=././lib/mysql-connector-java-5.1.46.jar
+#jdbc.url=jdbc:mysql://192.168.1.201:21563/wisdompolicy?serverTimezone=Asia/Shanghai
+#driverlocation=././lib/mysql-connector-java-5.1.46.jar
 ### 8驱动
-#jdbc.driverClassName=com.mysql.cj.jdbc.Driver
+jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 #jdbc.url: jdbc:mysql://192.168.10.81:3306/policy?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-#driverlocation=././lib/mysql-connector-java-8.0.11.jar
-#jdbc.driverLocation=D:\Development tools\maven-repository\mysql\mysql-connector-java\5.1.46\mysql-connector-java-5.1.46.jar"
+jdbc.url: jdbc:mysql://192.168.1.201:21563/wisdompolicy?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+driverlocation=././lib/mysql-connector-java-8.0.11.jar
 
 
 
